--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -1,18 +1,21 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Review</title>
+    <link rel="stylesheet" href="{% static "/reviews/styles.css" %}">
   </head>
   <body>
     <form action="/" method="POST">
       {% csrf_token %} 
-      {% if has_error %}
-        <p>This field is required</p>
-      {% endif %}
-      <label for="username">Name</label>
-      <input type="text" id="username" name="username" />
+      <div class="form-control {% if orm.user_name.errors %}errors{% endif %}">
+        {{ form.user_name.label_tag }}
+        {{ form.user_name }}
+        {{ form.user_name.errors }}
+      </div>
       <button type="submit">Send</button>
     </form>
   </body>
